# open-mini-keyboard-configurator

./: .gitignore  FEATURES.md  LICENSE  PHYSICAL_TESTS.md  README.md  REVERSE_ENGINEERING.md  VENDOR_COVERAGE.md  pyproject.toml
docs/hardware/: README.md  SUBMIT_DEVICE.md
mini_keyboard_tool/: __init__.py  catalog.py  cli.py  gui.py  hidapi.py  keycodes.py  ledcolors.py  profiles.py  protocol.py
tests/: __init__.py  test_protocol.py
